--- a/src/main/resources/templates/lab-reports.html
+++ b/src/main/resources/templates/lab-reports.html
@@ -52,6 +52,7 @@
                                         <input type="text" class="form-control" id="testName" autocomplete="off" required>
                                         <!-- Hidden ID Field -->
                                         <input type="hidden" id="testId">
+                                        <input type="hidden" id="containerId">
                                         <!-- 🔽 Live search suggestion dropdown -->
                                         <ul id="testSuggestions"
                                             class="list-group position-absolute w-100"
