--- a/src/main/resources/static/css/medical-store.css
+++ b/src/main/resources/static/css/medical-store.css
@@ -3,6 +3,7 @@
     background: linear-gradient(180deg, #2c3e50 0%, #3498db 100%);
     min-height: 100vh;
     color: white;
+    width: 265px;
 }
 .sidebar .nav-link {
     color: white;
