--- a/src/main/resources/templates/lab-reports.html
+++ b/src/main/resources/templates/lab-reports.html
@@ -17,7 +17,7 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
-        <nav class="col-md-3 col-lg-2 sidebar p-3">
+        <nav class="col-md-3 col-lg-2 sidebar">
             <div class="text-center mb-4">
                 <i class="fas fa-hospital-alt fa-3x mb-2"></i>
                 <h4>Medical Store</h4>
