--- a/src/main/resources/templates/lab-test-registration.html
+++ b/src/main/resources/templates/lab-test-registration.html
@@ -156,8 +156,25 @@
                     <div class="mt-3 text-end">
                         <h5>
                             <strong>Subtotal:</strong>
-                            <span id="subTotal" class="text-primary">$0.00</span>
+                            <span id="subTotal" class="text-primary">0.00</span>
                         </h5>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <label for="deliveryDate" class="form-label">Delivery Date</label>
+                            <input type="date" class="form-control" id="deliveryDate">
+                        </div>
+                        <div class="col-md-3">
+                            <label for="discountValue" class="form-label">Apply Discount</label>
+                            <input type="text" class="form-control" id="discountValue" placeholder="Enter discount">
+                        </div>
+                        <div class="col-md-6 mt-3 text-end">
+                            <h5>
+                                <strong>Total:</strong>
+                                <span id="total" class="text-primary">0.00</span>
+                            </h5>
+                        </div>
+
                     </div>
 
                 </div>
