--- a/src/main/resources/templates/lab-test-registration.html
+++ b/src/main/resources/templates/lab-test-registration.html
@@ -50,6 +50,7 @@
                                <label class="form-label">Test Name <span class="text-danger">*</span></label>
                                <input type="text" class="form-control" id="testName" required>
                                <input type="hidden" id="testId">
+                               <input type="hidden" id="search">
                                <input type="hidden" id="containerId">
 
                                <ul id="testSuggestions"
