--- a/src/main/resources/templates/lab-reports.html
+++ b/src/main/resources/templates/lab-reports.html
@@ -6,9 +6,8 @@
     <title>Medical Store - Lab Reports</title>
 
     <!-- Bootstrap & FontAwesome -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/all.min.css}">
     <link rel="stylesheet" th:href="@{/css/medical-store.css}">
 </head>
 
@@ -146,6 +145,10 @@
                     Save Report
                 </button>
 
+                <button type="button" class="btn btn-secondary mt-2 ms-2" onclick="printReport()">
+                    <i class="fa fa-print me-1"></i> Print Report
+                </button>
+
             </form>
 
 
@@ -155,8 +158,8 @@
 
 
 <!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
+<script th:src="@{/js/bootstrap.bundle.js}"></script>
 <script src="/tinymce/tinymce.min.js"></script>
 <script th:src="@{/js/lab-reports.js}"></script>
 <script>
@@ -168,7 +171,7 @@
         license_key: 'gpl',
         branding: false,
         skin_url: '/tinymce/skins/ui/oxide',
-        content_css: '/tinymce/skins/content/default/content.css',
+        content_css: '/tinymce/skins/content/default/content.min.css',
         plugins: 'link table lists',
         toolbar: 'bold italic underline | bullist numlist | link table'
     });
