--- a/src/main/resources/templates/lab-test-registration.html
+++ b/src/main/resources/templates/lab-test-registration.html
@@ -6,9 +6,8 @@
     <title>Medical Store - Lab Reports</title>
 
     <!-- Bootstrap & FontAwesome -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/all.min.css}">
     <!-- ✅ External CSS -->
     <link rel="stylesheet" th:href="@{/css/medical-store.css}">
     <link rel="stylesheet" th:href="@{/css/print.css}" media="print">
@@ -193,8 +192,9 @@
 </div>
 
 <!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
+<script th:src="@{/js/bootstrap.bundle.js}"></script>
+<script src="/tinymce/tinymce.min.js"></script>
 <!-- ✅ External JS -->
 <script th:src="@{/js/medical-store.js}"></script>
 <script th:src="@{/js/print.js}"></script>
