--- a/src/main/resources/templates/lab-test-registration.html
+++ b/src/main/resources/templates/lab-test-registration.html
@@ -145,7 +145,7 @@
                             <tr>
                                 <th>Test ID</th>
                                 <th>Name</th>
-                                <th>Description</th>
+                                <th>Action</th>
                                 <th>Price</th>
                             </tr>
                             </thead>
